# low_latency_workshop

./: README.md
design_patterns/: .gitignore  CMakeLists.txt  README.md
design_patterns/branch_reduction/: CMakeLists.txt  branch_reduction.cc
design_patterns/cache_line/: CMakeLists.txt  cache_line.cc
design_patterns/cache_warming/: CMakeLists.txt  cache_warming.cc
design_patterns/crtp/: CMakeLists.txt  crtp.cc
design_patterns/induction_variables/: CMakeLists.txt  induction_variables.cc
design_patterns/lock_free/: CMakeLists.txt  lock_free.cc
design_patterns/loop_unrolling/: CMakeLists.txt  loop_unrolling.cc
design_patterns/lto_wpo/: CMakeLists.txt  data_processing.cpp  data_processing.h  lto_wpo.cc  main.cpp  math_operations.cpp  math_operations.h
design_patterns/pointer_aliasing/: CMakeLists.txt  pointer_aliasing.cc
design_patterns/prefetching/: CMakeLists.txt  prefetching.cc
design_patterns/short_circuiting/: CMakeLists.txt  short_circuiting.cc
design_patterns/simd/: CMakeLists.txt  simd.cc
design_patterns/sso/: CMakeLists.txt  sso.cc
design_patterns/test/: CMakeLists.txt  test.cc
design_patterns/union_vs_variant/: CMakeLists.txt  union_vs_variant.cc
disruptor/: CMakeLists.txt  README.txt  bm_disruptor.cpp  disruptor.h  event.h  event_processor.h  gtest_disruptor  gtest_disruptor.cpp  main.cpp  producer.h  ring_buffer.h  sequencer.h  wait_strategy.h  yield_wait_strategy.h
disruptor/naive_implementation/: consumer.h  main.cpp  producer.h  queue.h
